--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 <body>
     <div>
         <div class="content" id="textContent">
-            hell
+            Awwleee Awlee Awlee
         </div>
-        <button id="signInBtn" class="show-button">Sign In</button>
+        <button id="signInBtn" class="show-button">BetaJii</button>
     </div>
     
     <audio id="audioPlayer" loop>
